v0.9.0, Slack integration
